plugins {
    id 'java'
    id 'application'
}

group = 'com.experiment'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // 로깅 (선택사항)
    implementation 'org.slf4j:slf4j-simple:2.0.9'

    // 테스트
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
}

application {
    mainClass = 'com.experiment.timeout_lab.TimeoutLabApplication'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs '--enable-preview'
}